codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_manual_compact_restates_realtime_start_shapes.snap
---
source: core/tests/suite/compact_remote.rs
assertion_line: 4000
expression: "format_labeled_requests_snapshot(\"Remote manual /compact while realtime remains active: the next regular turn restates realtime-start instructions after compaction clears the baseline.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", post_compact_request),])"
---
Scenario: Remote manual /compact while realtime remains active: the next regular turn restates realtime-start instructions after compaction clears the baseline.

## Remote Compaction Request
00:message/developer[2]:
    [01] <realtime_conversation>\nRealtime conversation started.\n\nYou a...
    [02] <PERMISSIONS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:USER_ONE
03:message/assistant:REMOTE_FIRST_REPLY

## Remote Post-Compaction History Layout
00:compaction:encrypted=true
01:message/assistant:<POST_COMPACT_HANDOFF>
02:message/developer:<POST_COMPACT_RECOVERY>
03:message/developer[2]:
    [01] <realtime_conversation>\nRealtime conversation started.\n\nYou a...
    [02] <PERMISSIONS_INSTRUCTIONS>
04:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
05:message/user:USER_TWO
